--- a/index.html
+++ b/index.html
@@ -21,6 +21,23 @@
           </ul>
         </div>
       </div>
+      <div class="content-main">
+        <div class="content1">
+          <h3 class="hi">Hi !</h3>
+          <h1 class="name">I'm Muhammad Raul.</h1>
+          <br />
+          <h1 class="skill">a Front-End Developer</h1>
+
+          <div class="content2">
+            Front-End developer based in bakasi, indonesian <br />
+            i'am coding with a clean and beautiful Problem <br />
+            solving in mind
+          </div>
+        </div>
+        <div class="img">
+          <img src="image1.jpg" class="img1" />
+        </div>
+      </div>
     </div>
   </body>
 </html>
