--- a/index.html
+++ b/index.html
@@ -38,6 +38,66 @@
           <img src="image1.jpg" class="img1" />
         </div>
       </div>
+      <div class="content3">
+        <h2 class="additional">
+          Additional <span class="passion">Passions</span>
+        </h2>
+      </div>
+      <div class="f">
+        <div class="set1">
+          <div class="img2"><img src="img 2.png" /></div>
+          <div class="data1">
+            <h3 class="front1">
+              Front-End <span class="developer">Developer</span>
+            </h3>
+            <h5 class="saas">(Saas, Bootstrap, Tailwind)</h5>
+          </div>
+        </div>
+
+        <div class="set2">
+          <div class="img3"><img src="img 3.png" /></div>
+          <div class="data2">
+            <h3 class="front2">
+              Back-End <span class="developer">Developer</span>
+            </h3>
+            <h5 class="saas2">(NodeJS, Laravel, Codeigniter)</h5>
+          </div>
+        </div>
+
+        <div class="set3">
+          <div class="img4"><img src="img 4.png" /></div>
+          <div class="data3">
+            <h3 class="front3">UI/UX <span class="designer">Designer</span></h3>
+            <h5 class="Figma">(Figma, zeplin, Adobe XD)</h5>
+          </div>
+        </div>
+      </div>
+
+      <div class="content4">
+        <h2 class="my">Contact<span class="portfolio">Me</span></h2>
+      </div>
+
+      <div class="content5">
+        <div class="img6">
+          <img src="img6.jpg" />
+          <h3 class="github">GitHub</h3>
+        </div>
+
+        <div class="img7">
+          <img src="img7.jpg" />
+          <h3 class="Instagram">Instagram</h3>
+        </div>
+
+        <div class="img8">
+          <img src="img8.jpg" />
+          <h3 class="Email">Email</h3>
+        </div>
+
+        <div class="img9">
+          <img src="img9.jpg" />
+          <h3 class="Telp">Telp</h3>
+        </div>
+      </div>
     </div>
   </body>
 </html>
