--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Document</title>
+    <title>website-2</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
