--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>website-02</title>
     <link rel="stylesheet" href="style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
     <div class="main">
@@ -101,4 +102,15 @@
       </div>
     </div>
   </body>
+</html>
+
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+
+    <title>Document</title>
+  </head>
+  <body></body>
 </html>
